[package]
name = "anthropic-sdk"
version = "0.0.2"
edition = "2021"
authors = ["Kayode Ojo <hello@mixpeal.com>"]
license = "MIT"
homepage = "https://github.com/mixpeal/anthropic-sdk"
repository = "https://github.com/mixpeal/antrhopic-sdk"
categories = ["api-bindings", "web-programming", "asynchronous"]
keywords = ["llm", "anthropic","ai", "gpt", "claude"]
description = "Anthropic Rust SDK."
readme = "README.md"

[dependencies]
anyhow = "1.0"
dotenv = "0.15.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }